--- a/gb/23/12/18/n14139022.md
+++ b/gb/23/12/18/n14139022.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>冲撞拜登车队 特拉华州男子被控酒驾</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139066-GettyImages-1855956054-600x400.jpg" />
-<h6>冲撞拜登车队的一名威尔明顿男子被控酒驾。图为2023年12月17日，在特拉华州威尔明顿，美国特勤局特工冲向一辆撞上总统车队车辆的银色汽车。当时拜登正在离开他的2024年竞选总部。(Andrew Caballero-Reynolds/AFP via Getty Images)
-</h6>
+<h6>冲撞拜登车队的一名威尔明顿男子被控酒驾。图为2023年12月17日，在特拉华州威尔明顿，美国特勤局特工冲向一辆撞上总统车队车辆的银色汽车。当时拜登正在离开他的2024年竞选总部。(Andrew Caballero-Reynolds/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2023年12月19日讯】（大纪元记者李馨综合报导）美国特拉华州威尔明顿（Wilmington）警方周一（12月18日）表示，周日晚驾车撞向美国总统拜登车队的男子被控酒后驾车，并宣布这是一起“意外碰撞”事件。</p>
 <p>威尔明顿警察局通信主任大卫?卡拉斯（David Karas）周一表示：“经过调查，威尔明顿警方已经认定这是一起意外碰撞事件。”</p>
@@ -14,37 +13,33 @@
 <p>特勤局发言人史蒂夫?科佩克（Steve Kopek）在一份声明中说，“这一事件与保护性利益无关”，这意味着撞车事件并非蓄意为之。</p>
 <p>现场拍摄的视频画面显示，该男子撞上总统车队的一辆SUV后，安保人员立即包围了他的车。特勤局特工们把一辆银色轿车逼到了角落，并拔出武器对准那个举起双手的男人。</p>
 <p>责任编辑：林妍#</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/8/n14112456.md#1">美议员促拜登政府提高中国汽车进口关税</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115772.md#1">3人欲窃特勤局车辆 保护拜登孙女特工开枪击退</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/6/n14131070.md#1">充电桩一个都没安 拜登推电动车行动阻力大</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/18/n14138457.md#1">【快讯】车队遭不明车辆冲撞 拜登已安全返家</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295180.md#1">台湾纪录片《冲天》 国军飞行员抗日纪实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322241.md#1">美国防部前UFO专家：外星人有入侵地球计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324783.md#1">露从今夜白！应对白露之变的养生要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325647.md#1">【未解之谜】清末两大预言解读 台海战后盛世出？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325862.md#1">台故宫特展“大美不言” 一览东西方工艺美学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325761.md#1">【菁英论坛】内蒙李建平案 牵涉中南海两大家族</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326137.md#1">【马克时空】普京改口提和谈 俄乌战何时停</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326058.md#1">【时事军事】美太空军确认移动目标追踪能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325897.md#1">中共大手笔援非洲惹怒网民 官方封杀评论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325853.md#1">广东副省长入国务院 李克强时期秘书全换光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325953.md#1">超强台风摩羯过后 居民：海口市惨不忍睹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14325077.md#1">伊能静被儿子化网红妆 母子俩贴脸自拍如姐弟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325261.md#1">子瑜Solo出道作夺榜单冠军 TWICE成员齐贺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326262.md#1">精灵不会老 奥兰多布鲁再当王子得想办法“冻龄”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325684.md#1">刘嘉玲回老家吃平价美食 一身天价行头引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326106.md#1">陆片《脑洞大开》投资5000万 首日票房仅270万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325943.md#1">专家：这3种高薪职业将来可能被AI取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326296.md#1">旅馆业者透露房客的6大错误 可能会多花钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14323912.md#1">冰淇淋百年流行口味一次看 你吃过几种？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14323989.md#1">【摄影天地】罕见的蓝耳翠鸟  悠游池塘边</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325848.md#1">衣服起毛球会破坏美感 如何预防？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/18/n14139022.htm">冲撞拜登车队 特拉华州男子被控酒驾</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/18/n14139022.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
